# kemono

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
kemono-api/: Cargo.toml
kemono-api/src/: inner.rs  lib.rs
kemono-api/src/model/: mod.rs  post_info.rs  posts_legacy.rs  user_profile.rs
kemono-cli/: Cargo.toml  build.rs
kemono-cli/benches/: whiteblack_filter.rs
kemono-cli/src/: batch.rs  lib.rs  main.rs  utils.rs
kemono-cli/src/batch/: ctx.rs  mod.rs
kemono-cli/src/helper/: mod.rs  utils.rs
kemono-cli/src/helper/batch/: mod.rs
kemono-cli/src/helper/post/: mod.rs  model.rs  worker.rs
kemono-cli/src/helper/single/: mod.rs
kemono-cli/src/stdio/: mod.rs
