[package]
name = "kemono-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1", default-features = false }
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "charset",
    "http2",
    "macos-system-configuration",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"
