[package]
name = "kemono-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
once_cell = "1"

tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
], default-features = false }
futures = "0.3"

ctrlc = "3"

clap = { version = "4", features = ["derive"] }
derive_builder = "0.20.2"
regex = "1"

indicatif = "0.17"

tracing = { version = "0.1.40" }
tracing-durations-export = { version = "0.3.0", features = ["plot"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "registry",
    "env-filter",
] }
tracing-tree = { version = "0.4.0" }
tracing-indicatif = "0.3.8"

kemono-api = { path = "../kemono-api" }
