[package]
name = "kemono-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", default-features = false }

tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
], default-features = false }
futures-lite = { version = "2.5.0", default-features = false }

ctrlc = "3"

clap = { version = "4", features = ["derive"] }
derive_builder = "0.20.2"
regex = { version = "1", default-features = false, features = ["unicode"] }

indicatif = "0.17"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "registry",
    "env-filter",
] }
tracing-indicatif = "0.3.8"

kemono-api = { path = "../kemono-api" }
unic-emoji-char = "0.9.0"
