[package]
name = "kemono-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1", default-features = false }

tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
], default-features = false }
futures-lite = { version = "2.5.0", default-features = false }

ctrlc = "3"

clap = { version = "4", features = ["derive"] }
derive_builder = "0.20.2"
regex = { version = "1", default-features = false, features = ["unicode"] }
kdam = { version = "0.6.2", features = ["rich", "spinner", "unicode"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }

kemono-api = { path = "../kemono-api" }
